--- a/gb/12/3/8/n3533722.md
+++ b/gb/12/3/8/n3533722.md
@@ -1,15 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《华侨时报》对法轮功报导变调追踪始末</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2012/03/1203072154441657-450x595.jpg" />
-<h6>加拿大魁北克省高等法院(大纪元）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2012年03月08日讯】<B> 编者按：经过大纪元一系列对《<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%8D%8E%E4%BE%A8%E6%97%B6%E6%8A%A5.md#1">华侨时报</a>》告《大纪元时报》败诉案子的报导，相信读者对这个案子已经有了初步的了解。今天，我们要为读者抽丝剥茧，透过《华侨时报》个案来看中共如何影响和收买海外华文媒体以实现其洗脑宣传的。</p>
-<p>有一点读者一定会非常感兴趣，就是在《<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%8D%8E%E4%BE%A8%E6%97%B6%E6%8A%A5.md#1">华侨时报</a>》这桩被法官称为“咬人者抱怨自己被咬的诉讼案”中，《华侨时报》并非一开始就像现在看到的这样。</B></p>
-<p>（大纪元加拿大记者站报导）2001年11月2日蒙特利尔的《华侨时报》刊登了一篇满是龌龊文字抹黑<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的五千字文章。文章作者为中共特务何兵，她当时找过蒙特利尔所有中文报纸，提出了“只要刊登，要多少钱都行”的条件。</p>
-<p>《华侨时报》在当年11月3日，发表了这名女特务恶毒攻击<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的文章。而《华侨时报》发行人周锦兴后来在法庭上承认他并不了解法轮功，也没有采访过任何一位法轮功学员。</p>
+	<p>【大纪元2012年03月08日讯】<B> 编者按：经过大纪元一系列对《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%8E%E4%BE%A8%E6%97%B6%E6%8A%A5.md#1">华侨时报</a>》告《大纪元时报》败诉案子的报导，相信读者对这个案子已经有了初步的了解。今天，我们要为读者抽丝剥茧，透过《华侨时报》个案来看中共如何影响和收买海外华文媒体以实现其洗脑宣传的。</p>
+<p>有一点读者一定会非常感兴趣，就是在《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%8E%E4%BE%A8%E6%97%B6%E6%8A%A5.md#1">华侨时报</a>》这桩被法官称为“咬人者抱怨自己被咬的诉讼案”中，《华侨时报》并非一开始就像现在看到的这样。</B></p>
+<p>（大纪元加拿大记者站报导）2001年11月2日蒙特利尔的《华侨时报》刊登了一篇满是龌龊文字抹黑<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的五千字文章。文章作者为中共特务何兵，她当时找过蒙特利尔所有中文报纸，提出了“只要刊登，要多少钱都行”的条件。</p>
+<p>《华侨时报》在当年11月3日，发表了这名女特务恶毒攻击<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的文章。而《华侨时报》发行人周锦兴后来在法庭上承认他并不了解法轮功，也没有采访过任何一位法轮功学员。</p>
 <p><B> 加拿大法轮功学员将《华侨时报》告上法庭</B></p>
 <p>据2003年11月10日至27日间魁省高等法院终审诽谤案时法轮功学员出示的证据显示，《人民日报》及至少数十份中国大陆网站转载了《华侨时报》攻击法轮功的文章，加重了对国内法轮功学员的迫害。</p>
 <p>法轮功原告方杨卉说：“我的名字在周的特刊中出现过，使我在中国的父母非常担心，他们看到那些报导后以为加拿大也开始镇压法轮功了。”</p>
@@ -63,45 +62,46 @@
 <p>在对《华侨时报》及周锦兴做了深入调查后，2007年7月13日，《大纪元时报》发表了主标题为“周锦兴与《华侨时报》成为中共新宠”、副标题为“充当中共海外代理 被用来欺骗大陆民众 结局已有前车之鉴”的深度报导。</p>
 <p>同年，周锦兴及《华侨时报》控告《大纪元时报》诽谤，并要求26万加元的损害赔偿。魁省法庭在2010年4月29日做出判决：《大纪元时报》胜诉，并驳回周锦兴起诉《大纪元时报》的要求；2012年2月23日，《华侨时报》及周锦兴的上诉在魁省上诉法庭败诉。</p>
 <p>（责任编辑：周行）</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/12/3/3/n3528957.md#1">“任何受外国政府影响的媒体都将丧失影响力”</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/10/7/15/n2967328.md#1">加拿大权威杂志披露北京利诱海外中文媒体</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/10/7/7/n2959331.md#1">辛素：逐步揭开中共海外秘密行动的盖子</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/10/5/7/n2900303.md#1">加拿大法庭驳回《华侨时报》对《大纪元》起诉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/5/7/n2900303.md#1">加拿大法庭驳回《华侨时报》对《大纪元》起诉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/7/n2959331.md#1">辛素：逐步揭开中共海外秘密行动的盖子</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/15/n2967328.md#1">加拿大权威杂志披露北京利诱海外中文媒体</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/3/3/n3528957.md#1">“任何受外国政府影响的媒体都将丧失影响力”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/25/n10666414.md#1">中共海外统战针对华人 美国会报告揭内幕</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/7/n11169990.md#1" target="_blank">共产暴政录：老挝华人共产前后的处境变化</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/30/n10752312.md#1" target="_blank">谭松：一个被摧折了“阳根”的老地主</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948100.md#1">【现场视频】富士康上千工人维权 遭警驱赶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】武汉肺炎病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/3/8/n3533722.htm">《华侨时报》对法轮功报导变调追踪始末</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/3/8/n3533722.htm">《华侨时报》对法轮功报导变调追踪始末</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/12/3/8/n3533722.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/12/3/8/n3533722.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
